fix bug and change model