@@ -1,5 +1,6 @@
 package com.project.library.service.impl;
 
+import com.project.library.dto.PageDTO;
 import com.project.library.dto.category.CategoryDTO;
 import com.project.library.dto.category.CreateCategoryDTO;
 import com.project.library.dto.category.UpdateCategoryDTO;
@@ -8,11 +9,13 @@ import com.project.library.repository.CategoryRepo;
 import com.project.library.service.CategoryService;
 import com.project.library.util.NotFoundException;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Pageable;
+import org.springframework.data.jpa.domain.Specification;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class CategoryServiceImpl implements CategoryService {
@@ -23,7 +26,8 @@ public class CategoryServiceImpl implements CategoryService {
     @Override
     public CategoryDTO createCategory(CreateCategoryDTO createCategoryDTO) throws Exception {
         CategoryEntity category = new CategoryEntity();
-        category.setName(createCategoryDTO.getName());
+        category.setName(createCategoryDTO.getName().trim());
+        category.setDescription(createCategoryDTO.getDescription().trim());
         return convertDTO(categoryRepo.save(category));
     }
 
@@ -31,7 +35,8 @@ public class CategoryServiceImpl implements CategoryService {
     public CategoryDTO updateCategory(UpdateCategoryDTO updateCategoryDTO) throws Exception {
         CategoryEntity category = categoryRepo.findById(updateCategoryDTO.getId())
                 .orElseThrow(() -> new NotFoundException("Category not found"));
-        category.setName(updateCategoryDTO.getName());
+        category.setName(updateCategoryDTO.getName().trim());
+        category.setDescription(updateCategoryDTO.getDescription().trim());
         return convertDTO(categoryRepo.save(category));
     }
 
@@ -44,12 +49,21 @@ public class CategoryServiceImpl implements CategoryService {
 
     @Override
     @Transactional(readOnly = true)
-    public List<CategoryDTO> getCategories() throws Exception {
-        List<CategoryEntity> list = categoryRepo.findAll();
-        return list.stream()
+    public PageDTO getCategories(Specification<CategoryEntity> spec, Pageable pageable) throws Exception {
+        Page<CategoryEntity> pageData = categoryRepo.findAll(spec, pageable);
+        PageDTO pageDTO = new PageDTO();
+        pageDTO.setPage(pageable.getPageNumber() + 1);
+        pageDTO.setSize(pageable.getPageSize());
+        pageDTO.setTotalElements(pageData.getTotalElements());
+        pageDTO.setTotalPages(pageData.getTotalPages());
+        List<CategoryDTO> categoryDTOS = pageData.getContent()
+                .stream()
                 .map(CategoryServiceImpl::convertDTO)
-                .collect(Collectors.toList());
+                .toList();
+        pageDTO.setData(categoryDTOS);
+        return pageDTO;
     }
+
 
     @Override
     public void deleteCategory(Long id) throws Exception {
@@ -64,6 +78,7 @@ public class CategoryServiceImpl implements CategoryService {
         CategoryDTO categoryDTO = new CategoryDTO();
         categoryDTO.setId(category.getId());
         categoryDTO.setName(category.getName());
+        categoryDTO.setDescription(category.getDescription());
         categoryDTO.setCreatedAt(category.getCreatedAt());
         categoryDTO.setUpdatedAt(category.getUpdatedAt());
         return categoryDTO;
